[package]
name = "rscan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
exitcode = "1.1.2"
futures = "0.3.25"
pnet = "0.31.0"
pnet_datalink = "0.31.0"
pnet_transport = "0.31.0"
rand = "0.8.5"
tokio = { version = "1.23.0", features = ["macros", "rt", "rt-multi-thread", "time"] }
